# autodep

./: .gitignore  Cargo.toml  README.md  bench.json  bench.sh  bench2.sh  bench_config.toml  bench_run.sh  build.rs  config.toml  lambda.py  run.sh  status.py  test.py  test2.py  threaded_test.py  todo.md
logs/: c.sh  worker_35815_1701560075.err  worker_35815_1701560075.out  worker_37015_1701560215.err  worker_37087_1701560077.err  worker_37087_1701560077.out  worker_37193_1701560213.err  worker_37643_1701560168.err  worker_37813_1701560238.err  worker_38971_1701559609.err  worker_39295_1701560171.err  worker_40017_1701559448.err  worker_40325_1701560170.err  worker_42281_1701560000.err  worker_42281_1701560000.out  worker_43451_1701560217.err  worker_43591_1701559888.err
minimal/: Cargo.toml  build.rs  worker.proto
minimal/src/: main.rs  worker.rs
models/: bert.py  models.py  new.py  resnet.py  transformer.py
proto/: worker.proto
src/: init_server.rs  init_worker.rs  lib.rs  loadtorch.rs  main.rs  manager.rs  server.rs  test.rs  torch.rs  worker.rs  worker_runner.rs
src/server/: mod.rs  protocol.rs  routes.rs
tests/: bench.sh  bench2.sh  classification_req.json  classification_test.py  dynamic.py  img2img_req.json  img2img_test.py  img2img_threaded.py  lambda.py  sine.py  static_classification.py  static_img2img.py  status.py  tests.py  threaded_test.py
