[package]
name = "autodep"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "autodep"

[[bin]]
path = "src/init_worker.rs"
name = "worker"

[lib]
path = "src/lib.rs"

[dependencies]
# tokio
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.14"

# for worker
tonic = "0.10"
prost = "0.12"
tch = { version = "0.14.0", features = [ "download-libtorch" ] }
image = "0.24.7"

# for http server
actix-web = "4.4.0"
serde = "1.0.193"

# logging
tracing = "0.1"
tracing-subscriber = "0.3"

# util
anyhow = "1.0.75"
port_scanner = "0.1.5"
rand = "0.7"
nix = { version = "0.27.1", features = ["signal"] }
base64 = "0.21.5"

[build-dependencies]
tonic-build = "0.10"

